# ===================================================================
# ym-logic のための CMakeLists.txt
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  ${PROJECT_BINARY_DIR}/include
  ${PROJECT_SOURCE_DIR}/ym-common/include
  ${PROJECT_SOURCE_DIR}/ym-base/include
  include
  private_include
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(c++-srcs)
add_subdirectory(test-programs)
if ( Python3_FOUND )
#  add_subdirectory(py_capi)
#  add_subdirectory( pytest )
endif ( Python3_FOUND )
