# ===================================================================
# ym-logic のための CMakeLists.txt
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(expr)
add_subdirectory(sop)
add_subdirectory(alg)
add_subdirectory(tvfunc)
add_subdirectory(npn)
add_subdirectory(aig)
add_subdirectory(dd)
add_subdirectory(gtest)


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set (ym_logic_SOURCES
  ${aig_SOURCES}
  ${dd_SOURCES}
  ${expr_SOURCES}
  ${npn_SOURCES}
  ${sop_SOURCES}
  ${alg_SOURCES}
  ${tvfunc_SOURCES}
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_logic
  ${ym_logic_SOURCES}
  )


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
