# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(mwc_test)
add_subdirectory(bcf_test)
add_subdirectory(npn_test)
add_subdirectory(bdd)
