
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )
#add_subdirectory( test-programs )


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set ( aig_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/AigHandle.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/AigEdge.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/AigMgr.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/AigMgrImpl.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/AigMgrHolder.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/DotGen.cc
  PARENT_SCOPE
  )


# ===================================================================
# ターゲットの設定
# ===================================================================


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
