# ===================================================================
# ym-logic のための CMakeLists.txt
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(gtest)


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set (expr_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/Expr.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Expr_analyze.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ExprMgr.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ExprNode.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ExprParser.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ExprWriter.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
