# ===================================================================
# ym-logic のための CMakeLists.txt
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(gtest)


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set (factor_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/KernelGen.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/LitSet.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/BestKernel.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/OneLevel0Kernel.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/WeakDivision.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/BoolDivision.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/GenFactor.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
