# ===================================================================
# ym-logic のための CMakeLists.txt
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(gtest)


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set (npn_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/IgPartition.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/NpnMap.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/NpnMapM.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/NpnMgr.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/PolConf.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/walsh_01_normalize.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/walsh_2_refine.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/walsh_w0_refine.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/walsh_w1_refine.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
